--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,13 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    //import thư viện  annotations @SerializedName và thu vien retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
+    implementation 'com.google.code.gson:gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    //import glide thu vien hỗ trợ loadanh
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
 }
