--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,9 @@
         android:theme="@style/Theme.Ass_ADR_API"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
+        <activity
+            android:name=".Activity.QandAActivity"
+            android:exported="false" />
         <activity
             android:name=".Activity.EditProfile"
             android:exported="false" />
